chore: rename open-source to floss

--- a/thesis.tex
+++ b/thesis.tex
@@ -113,7 +113,7 @@
 %\subsection{Defining Endangered Languages}
 %\subsection{What are computational resources}
 \include{resources}
-\include{open-source}
+\include{floss}
 % \subsection{Defining "open source"}
 % \subsection{Where is open source code?}
 % \subsection{Data rights and privacy}
