More work on floss-4-lrls

--- a/case-studies.tex
+++ b/case-studies.tex
@@ -9,12 +9,14 @@ Scottish Gaelic is a Celtic language spoken mainly in the United Kingdom, which 
 
 A large corpus compiled by the An Crub\'ad\'an project is available online \footnote{\href{http://crubadan.org/languages/gd}{http://crubadan.org/languages/gd}} \citep{scannell2007crubadan}. % Mentioned directly in the text
 
+ODIN has exactly 59 IGT entries for Scottish Gaelic.
+
+
 As it is similar to Irish, it is a good example of how code from related languages can be used to bootstrap efforts to build code for its own language. I'll talk in depth about the language, its structure and grammar as related to code, its users and their use cases, and efforts to use code to make Scottish Gaelic digitally ascend.
 
 %% Mention Ceitidh https://www.cereproc.com/en/CereProc_Gaelic_Synthetic_Voice_Ceitidh
 
 %%  In 2001 the UK Government ratified the European Charter for Regional or Minority Languages (hereafter ECRML), recognising Ulster Scots and Irish in Northern Ireland, Welsh in Wales, Scots and Gaelic in Scotland, but not Cornish. Writing during the build-up to ratification, Dunbar (2000: 68) argued the case for Cornish: - Cornish, Sayers
-
 \subsection{Naskapi}
 \label{sec:naskapi}
 
@@ -59,6 +61,9 @@ All told, computational work is exceedingly limited. There are some websites in 
 
 While FLEx is open source, none of the linguists edit the code for it or use the codebase, depending on SIL International to keep the product up to date. Keyman is likewise not edited, although it is installed on local computers. There have been at least one Naskapi speaker who found and used a syllabic keyboard, but there has been no effort to standardise the syllabics in the schools or with other speakers, and the relevant code has not been shared in any official capacity by any party in the language community.
 
+\subsubsection{Resources on the web}
+
+ODIN has exactly one IGT entry for Naskapi, from \citep{richards2004syntax}.
 
 % TODO Add in Kornai's notes about Cree in kornai2013digital here
 % TODO Add jancewicz2002applied and look at all papers which cite it
