--- a/methods.tex
+++ b/methods.tex
@@ -7,7 +7,6 @@
 
 I'll give some recommendations on a license, both for individuals and for larger companies. I am not a lawyer, so this will be short and tempered.
 
-
 Work published without a license on a public site is not technically open source, either. When software is not licensed, it by default reverts (in the USA) to copyright where {\it all rights are reserved}, which is by definition not FLOSS. For this reason, it's important to add a license to code if it is in your purview to do so, and if you wish to follow the open source methodology. %This may belong elsewhere
 
 \subsection{Choosing repositories}
@@ -15,9 +14,8 @@ Work published without a license on a public site is not technically open source
 
 I'll talk about my actual recommendations for storing code. I'll talk about how GitHub is a business, and its aims may not be aligned with researchers interested in long term archival, and similar concerns.
 
-% Longer term plans for open source repositories; GitHub is useful currently, but it also a business, and as such its aims may not be aligned with its users. I would like to talk about building a database of open source repositories on a secure, permanent, peer-to-peer network. This is something I am actively involved in professionally (I currently work at IPFS, which is building such a network). I would like to talk about linguistic and scientific applications of using versioned, p2p, and distributed systems for storing both open source code related to low resource languages as well as language data.
 
 \subsection{Sharing code without a platform}
 \label{subsec:sharing-code-without-a-platform}
 
-I'll outline a plan for peer-to-peer resource sharing, using IPFS \citep{benet2014ipfs} and other related tech. I'll mention a case study involving local indigenous communities in Guyana using peer-to-peer to track illegally logging on their land, and explain how this system could also be used for language development.\footnote{\href{https://www.digital-democracy.org/}{https://www.digital-democracy.org/}}
+I'll outline a plan for peer-to-peer resource sharing, using IPFS \citep{benet2014ipfs} and other related tech. I'll mention a case study involving local indigenous communities in Guyana using peer-to-peer to track illegally logging on their land, and explain how this system could also be used for language development.\footnote{\href{https://www.digital-democracy.org/}{https://www.digital-democracy.org/}} I'll discuss linguistic and scientific applications of using versioned, p2p, and distributed systems for storing both open source code related to low resource languages as well as language data.
