--- a/references.bib
+++ b/references.bib
@@ -7,6 +7,18 @@
   note={Last accessed on April~24, 2018.}
 }
 
+@article{richards2004syntax,
+  title={The syntax of the conjunct and independent orders in Wampanoag},
+  author={Richards, Norvin W},
+  journal={International Journal of American Linguistics},
+  volume={70},
+  number={4},
+  pages={327--368},
+  year={2004},
+  publisher={The University of Chicago Press}
+}
+
+
 @inproceedings{scannell2007crubadan,
   title={The Cr{\'u}bad{\'a}n Project: Corpus building for under-resourced languages},
   author={Scannell, Kevin P},
